2nd fixing alignment

--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,6 @@ body {
 .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  /* justify-content: center; */
   margin: 0 -1rem;
 }
